# TravelProjectDjango

./: .gitignore  README.md  appspec.yml  hello_world.py  project_structure.txt  pyproject.toml  requirements.txt  setup.bat  setup.ps1  ssh.txt  列出專案目錄腳本.ps1  啟動django.bat
scripts/: after_install.sh  before_install.sh  start_server.sh
travelProject/: db.sqlite3  manage.py
travelProject/accounts/: forms.py  models.py  urls.py  views.py
travelProject/accounts/management/commands/: cleanup_guests.py
travelProject/accounts/migrations/: 0001_initial.py  0002_alter_profile_phone_number.py  0003_profile_known_devices_profile_phone_verified_and_more.py  0004_profile_is_guest.py
travelProject/accounts/templates/accounts/: registration_login.html  sGoogleOAuthTest.html
travelProject/bookkeeping/: admin.py  forms.py  models.py  urls.py  views.py
travelProject/bookkeeping/migrations/: 0001_initial.py  0002_memberrelation_created_id_alter_memberrelation_no_id_and_more.py  0003_rename_created_id_memberrelation_created_by_and_more.py  0004_alter_record_date.py
travelProject/bookkeeping/templates/: base.html  nav.html
travelProject/bookkeeping/templates/bookkeeping/: base.html  details.html  index.html  items.html  log_message.html  newitem.html
travelProject/camaramap/: apps.py  models.py  speed_cameras.csv  views.py
travelProject/camaramap/migrations/: 0001_initial.py  0002_delete_speedcamera.py
travelProject/camaramap/static/assets/css/: nice-select.css
travelProject/camaramap/static/assets/js/: custom.js
travelProject/camaramap/templates/camaramap/: dynamicmap.html  index.html  speed_camera_map.html
travelProject/funstuff/: apps.py  forms.py  mixins.py  urls.py  utils.py  views.py
travelProject/funstuff/static/funstuff/js/: auto_close_switch.js  explosive_quiz.js
travelProject/funstuff/templates/funstuff/widgets/: auto_close_switch.html  explosive_quiz.html  feedback_explosive.html  feedback_explosive_physics.html  real2Dphisi.html  three.html
travelProject/ml_models/: trend_model.pkl
travelProject/personalPage/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
travelProject/personalPage/migrations/: 0001_initial.py  0002_alter_destination_date.py
travelProject/personalPage/static/react/: asset-manifest.json
travelProject/personalPage/static/react/static/js/: 453.ab49e6c3.chunk.js.map  main.4d68078e.js  main.4d68078e.js.map
travelProject/personalPage/templates/: personalPage.html
travelProject/personalPage/templates/react/: create_travel_plan.html  edit_travel_plan.html  index.html  personalPage.html  travel_plan_detail.html
travelProject/personalpage-frontend/: package-lock.json  package.json
travelProject/static/assets/css/: style_dark.css
travelProject/static/assets/css/homepage_css/css/: main.css  (+1 more)
travelProject/static/assets/css/map_css/: responsive.css  style.css
travelProject/static/assets/js/: main.min.js  plugins.min.js
travelProject/static/assets/scss/: _variabls.scss
travelProject/staticfiles/assets/css/: style.min.css  style_dark.css
travelProject/staticfiles/assets/js/: vendor.min.js
travelProject/staticfiles/assets/scss/: _common.scss  _header.scss
travelProject/staticfiles/react/: index.html
travelProject/staticfiles/react/static/js/: 453.ab49e6c3.chunk.js
travelProject/templates/: base.html  index.html
travelProject/travelProject/: asgi.py  settings.py  urls.py  wsgi.py
travelProject/trends_app/: apps.py  fetcher.py  ml_utils.py  models.py  urls.py  views.py
travelProject/trends_app/migrations/: 0001_initial.py
travelProject/trends_app/templates/trends_app/: evaluate.html  index.html
