[project]
name = "travelprojectdjangopoetry"
version = "0.1.0"
description = "20250211init test run"
authors = [
    {name = "bowser",email = "g122258632@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (==3.1.0)",
    "requests (==2.32.3)",
    "pandas (==2.2.3)",
    "bs4 (==0.0.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "asgiref (==3.8.1)",
    "attrs (==25.1.0)",
    "backports-tarfile (==1.2.0)",
    "beautifulsoup4 (==4.13.3)",
    "blinker (==1.9.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.1)",
    "crashtest (==0.4.1)",
    "cycler (==0.12.1)",
    "distlib (==0.3.9)",
    "distro (==1.9.0)",
    "django (==5.1.6)",
    "dulwich (==0.22.7)",
    "exceptiongroup (==1.2.2)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "fonttools (==4.56.0)",
    "git-filter-repo (==2.47.0)",
    "googlemaps (==4.10.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "itsdangerous (==2.2.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.5)",
    "jiter (==0.8.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.0)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "mysqlclient (==2.2.7)",
    "numpy (==2.2.2)",
    "openai (==1.62.0)",
    "outcome (==1.3.0.post0)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "poetry (==2.0.1)",
    "poetry-core (==2.0.1)",
    "poetry-plugin-export (==1.9.0)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pyparsing (==3.2.1)",
    "pyproject-hooks (==1.2.0)",
    "pysocks (==1.7.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2025.1)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.12.1)",
    "requests-toolbelt (==1.0.0)",
    "seaborn (==0.13.2)",
    "selenium (==4.28.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.38)",
    "sqlparse (==0.5.3)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.2)",
    "tqdm (==4.67.1)",
    "trio (==0.28.0)",
    "trio-websocket (==0.11.1)",
    "trove-classifiers (==2025.1.15.22)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.2)",
    "websocket-client (==1.8.0)",
    "werkzeug (==3.1.3)",
    "wsproto (==1.2.0)",
    "zipp (==3.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
